--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Joost van Ieperen | UX Designer</title>
+
+		<meta name="keywords" content="joost van ieperen, ux designer, easier, fun, reversed, netherlands">
+		<meta name="description" content="Hi! I'm Joost van Ieperen, UX Designer. I try to make people's lives easier and more fun.">
+		<meta name="author" content="Joost van Ieperen">
+
+		<meta property="og:title" content="Joost van Ieperen | UX Designer">
+		<meta property="og:description" content="Hi! I'm Joost van Ieperen, UX Designer. I try to make people's lives easier and more fun.">
+		<meta property="og:image" content="http://www.joostvanieperen.com/dist/img/social.jpg">
+		<meta property="og:url" content="http://www.joostvanieperen.com">
+		<meta name="twitter:card" content="Hi! I'm Joost van Ieperen, UX Designer. I try to make people's lives easier and more fun.">
+		<meta property="og:site_name" content="Joost van Ieperen | UX Designer">
+		<meta name="twitter:image:alt" content="Joost van Ieperen | UX Designer">
+
+		<!-- favicon meta tags -->	
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5ABM6NmLmn">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5ABM6NmLmn">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5ABM6NmLmn">
+		<link rel="manifest" href="/site.webmanifest?v=5ABM6NmLmn">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg?v=5ABM6NmLmn" color="#e36414">
+		<link rel="shortcut icon" href="/favicon.ico?v=5ABM6NmLmn">
+		<meta name="msapplication-TileColor" content="#2b5797">
+		<meta name="theme-color" content="#ffffff">
+
+		<link rel="stylesheet" href="dist/css/master.css"/>
+	</head>
+
+	<body>
+		<div class="app">
+
+			<header>
+				<svg class="logo" width="173px" height="173px" viewBox="0 0 173 173">
+					<g stroke="none" stroke-width="1" fill-rule="evenodd">
+						<path d="M128.31988,122.225409 C128.31988,123.09307 127.602004,123.998869 126.495782,123.998869 L113.133638,123.998869 C112.020628,123.998869 111.309539,123.112139 111.309539,122.218808 L111.309539,89.7171066 C111.303507,88.4907934 109.532947,88.0998694 109.037522,89.3122472 L98.2965303,109.53028 C98.0522112,109.995282 97.8961185,110.252719 97.1631611,110.260787 L92.0407546,110.260787 C91.4028103,110.249786 91.1517046,109.944674 90.9081395,109.523679 L79.2486887,89.3063797 C79.0337784,88.8039727 78.5979252,88.5692716 78.1620719,88.5692716 C77.5648474,88.5692716 76.9751637,88.9998014 76.9819503,89.7105057 L76.9751637,98.7619002 C76.9751637,99.2511053 76.968377,99.7337095 76.9487712,100.209713 C76.8281198,103.470591 76.3047943,106.43736 75.4066953,109.104151 C75.4066953,109.117353 75.3991546,109.137156 75.393122,109.150358 C73.468732,114.823523 69.8416489,119.108285 64.7659949,121.80148 C64.7592082,121.808081 64.7456349,121.814682 64.7396024,121.814682 C60.6563062,123.9798 55.6409778,125.114433 49.8489559,125.114433 C47.3808805,125.114433 45.0877496,124.768249 42.9424167,124.136023 C37.384157,122.473312 32.8793349,118.853781 29.3525433,114.197898 C29.0441281,113.79964 28.9430826,113.311168 29.0298008,112.847633 C29.1044538,112.430305 29.3382159,112.039381 29.7077109,111.751873 L39.1011774,104.168093 C40.0188822,103.457389 41.0791064,103.626814 41.8829465,104.592022 C44.6790429,107.904975 47.1131852,109.339585 50.2704818,109.339585 C51.4302435,109.339585 52.6171518,109.143757 53.7369477,108.73303 C53.7497669,108.726429 53.7573076,108.719828 53.7708809,108.719828 C57.0148957,107.526519 59.7310606,104.539948 59.9452169,99.2965787 C59.9384303,99.2899777 59.9452169,99.2833767 59.9452169,99.2833767 C59.9520035,99.1139519 59.9587902,98.9379261 59.9587902,98.7619002 C59.9655768,98.5792734 59.9655768,98.3966466 59.9655768,98.2140198 L59.9655768,55.7741936 C59.9655768,54.8023844 60.7769576,54 61.7889213,54 L75.7015372,54 C76.5596704,54 77.1961066,54.5867527 77.3981977,55.1287656 L93.2005163,88.3426383 C93.3882801,88.8648483 93.8648532,89.1186188 94.3203123,89.1186188 C94.6754798,89.1186188 95.1912646,88.9169226 95.4333215,88.3426383 L110.907619,55.1089627 C111.256,54.2875088 112.027415,54 112.596739,54 L126.495782,54 C126.99196,54 127.448174,54.2090307 127.782981,54.5214765 C128.118543,54.8478577 128.31988,55.2915895 128.31988,55.7807946 L128.31988,122.225409 Z M86.4966067,1 C39.2759063,1 1,39.2840323 1,86.5037703 C1,133.723508 39.2759063,172 86.4966067,172 C133.716553,172 172,133.723508 172,86.5037703 C172,39.2840323 133.716553,1 86.4966067,1 L86.4966067,1 Z"></path>
+					</g>
+				</svg>
+			</header>
+
+			<main>
+				<section class="intro">
+					<h1>Hi! I'm Joost van Ieperen, UX designer. <span>I try to make people's lives easier and more fun.</span></h1>
+				</section>
+				<section class="details">
+					<div>
+						<h2>Working at</h2>
+						<h3><a href="http://thinkreversed.nl" title="Reversed Digital" target="_blank">Reversed Digital</a> <span>&#x1F680</span></h3>
+					</div>
+					<div>
+						<h2>Previously at</h2>
+						<h3><a href="http://valtech.nl" title="Valtech NL" target="_blank">Valtech NL</a> and <a href="http://informaat.nl" title="Informaat" target="_blank">Informaat</a></h3>		
+					</div>
+					<div>
+						<h2>Contact</h2>
+						<h3><a href="mailto:hello@joostvanieperen.com" title="hello@joostvanieperen.nl">hello@joostvanieperen.com</a></h3>
+					</div>
+				</section>
+			</main>
+
+			<footer>
+				<small>
+					&copy; <span id="copyright"></span> JM</small>
+				<ul>
+					<li>
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+						Utrecht, The Netherlands	
+					</li>
+					<li>
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+						<span id="time"></span>&nbsp;(local time)
+					</li>
+				</ul>
+			</footer>
+
+		</div>
+
+		<script type="text/javascript">
+			function downloadJSAtOnload() {
+				var element = document.createElement("script");
+				element.src = "dist/js/master.js";
+				document.body.appendChild(element);
+			}
+			if (window.addEventListener) {
+				window.addEventListener("load", downloadJSAtOnload, false);
+			}
+			else if (window.attachEvent) {
+				window.attachEvent("onload", downloadJSAtOnload);
+			}
+			else {
+				window.onload = downloadJSAtOnload;
+			}
+		</script>
+	</body>
+</html>
