--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<h3><a href="http://valtech.nl" title="Valtech NL" target="_blank">Valtech NL</a> and <a href="http://informaat.nl" title="Informaat" target="_blank">Informaat</a></h3>		
 					</div>
 					<div>
-						<h2>Contact</h2>
-						<h3><a href="mailto:hello@joostvanieperen.com" title="hello@joostvanieperen.nl">hello@joostvanieperen.com</a></h3>
+						<h2>Follow me at</h2>
+						<h3><a href="https://www.instagram.com/jmvanieperen/" title="Instagram" target="_blank">Instagram</a></h3>
 					</div>
 				</section>
 			</main>
@@ -71,10 +71,6 @@
 					<li>
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
 						Utrecht, The Netherlands	
-					</li>
-					<li>
-						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-						<span id="time"></span>&nbsp;(local time)
 					</li>
 				</ul>
 			</footer>
