--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<h3><a href="http://valtech.nl" title="Valtech NL" target="_blank">Valtech NL</a> and <a href="http://informaat.nl" title="Informaat" target="_blank">Informaat</a></h3>		
 					</div>
 					<div>
-						<h2>Follow me at</h2>
-						<h3><a href="https://www.instagram.com/jmvanieperen/" title="Instagram" target="_blank">Instagram</a></h3>
+						<h2>Contact</h2>
+						<h3><a href="mailto:hello@joostvanieperen.com" title="hello@joostvanieperen.com">hello@joostvanieperen.com</a></h3>
 					</div>
 				</section>
 			</main>
