--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<section class="details">
 					<div>
 						<h2>Working at</h2>
-						<h3><a href="http://thinkreversed.nl" title="Reversed Digital" target="_blank">Reversed Digital</a> <span>&#x1F680</span></h3>
+						<h3><a href="http://reverseddigital.com" title="Reversed Digital" target="_blank">Reversed Digital</a> <span>&#x1F680</span></h3>
 					</div>
 					<div>
 						<h2>Previously at</h2>
